Added streaming support for Android
Added a new event that can be used to subscribe to audio data events while recording. We try to send an event every 10ms, but Android may force a longer frame time. We don't resample the audio data, but we provide the true sample rate so callers can adapt as needed.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-audio",
-  "version": "3.2.9",
+  "version": "3.2.10",
   "description": "React Native extension for recording audio",
   "main": "index.js",
   "author": "Joshua Sierles <joshua@diluvia.net> (https://github.com/jsierles)",
@@ -11,6 +11,7 @@
     "ios/RNAudio.xcodeproj",
     "README.md",
     "LICENSE",
+    "index.d.ts",
     "index.js",
     "android/*"
   ],
