--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-native-audio",
-  "version": "10.0.0",
+  "version": "10.0.2",
   "description": "React Native extension for recording audio",
   "main": "index.js",
-  "author": "Joshua Sierles <joshua@diluvia.net> (https://github.com/jsierles)",
+  "author": "Josh Baxley <josh@bluecanoelearning.com>",
   "scripts": {
     "prebuild": "rm -rf ./lib",
     "build": "tsc"
