--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-audio",
-  "version": "10.0.7",
+  "version": "10.1.10",
   "description": "React Native extension for recording audio",
   "main": "index.js",
   "author": "Josh Baxley <josh@bluecanoelearning.com>",
@@ -29,16 +29,18 @@
   },
   "nativePackage": true,
   "peerDependencies": {
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react": "16.6.3",
+    "react-native": "^0.58.4",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/base-64": "^0.1.2",
-    "@types/react-native": "^0.57.18",
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "@types/react-native": "^0.57.37",
+    "react": "16.6.3",
+    "react-native": "^0.58.4",
     "react-native-fetch-blob": "https://github.com/BlueCanoeLearning/react-native-fetch-blob#internal-master",
-    "typescript": "^3.2.2"
-  }
+    "tslib": "^1.9.3",
+    "typescript": "^3.3.3"
+  },
+  "dependencies": {}
 }
