--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-audio",
-  "version": "10.1.13",
+  "version": "10.2.13",
   "description": "React Native extension for recording audio",
   "main": "index.js",
   "author": "Josh Baxley <josh@bluecanoelearning.com>",
@@ -29,15 +29,16 @@
   },
   "nativePackage": true,
   "peerDependencies": {
-    "react": "16.6.3",
-    "react-native": "^0.58.4",
+    "react": "16.8.3",
+    "react-native": "0.59.3",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+  	"@babel/core": "^7.0.0-0",
     "@types/base-64": "^0.1.2",
     "@types/react-native": "^0.57.37",
-    "react": "16.6.3",
-    "react-native": "^0.58.4",
+    "react": "16.8.3",
+    "react-native": "0.59.3",
     "react-native-fetch-blob": "https://github.com/BlueCanoeLearning/react-native-fetch-blob#internal-master",
     "tslib": "^1.9.3",
     "typescript": "^3.3.3"
