--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:3.3.1"
+        classpath "com.android.tools.build:gradle:3.4.2"
     }
 }
 
@@ -45,7 +45,7 @@ repositories {
 dependencies {
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
     //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '28.0.0')}"
-    implementation "com.android.support:support-v4:${safeExtGet('supportLibVersion', '28.0.0')}"
+    // implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '28.0.0')}"
+    // implementation "com.android.support:support-v4:${safeExtGet('supportLibVersion', '28.0.0')}"
     // implementation "com.android.support:support-media-compat:${safeExtGet('supportLibVersion', '28.0.0')}"
 }
